[project]
name = "pathway-rfp"
version = "0.1.0"
description = "End-to-end RFP pipeline: menu parsing, USDA pricing, distributor search, and email outreach"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "streamlit>=1.40.0",
    "anthropic>=0.40.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.150.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.28.0",
    "mechanicalsoup>=0.12.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
